--- a/main.css
+++ b/main.css
@@ -36,7 +36,10 @@ h2
 }
 .numm
 {
-	padding: 2px 50px;
+	padding: 2px 48px;
 	outline: none;
 	border-radius: 5px;
+}
+.stop{
+	padding: 2px 21px;
 }
